prevent matrix image from being distorted

--- a/src/sass/global-nav.scss
+++ b/src/sass/global-nav.scss
@@ -223,6 +223,7 @@ $global-nav-overlay-color: rgba(17, 17, 17, 0.4);
     margin-right: 0.75rem;
     max-height: 2rem;
     max-width: 2rem;
+    object-fit: contain;
     position: relative;
     top: 0.1rem;
 
